{
    "name": "InputControler",
    "maps": [
        {
            "name": "Game",
            "id": "44d1836f-1292-4a98-a879-86efaaea3313",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "bd1dbf32-8177-4b29-b7cf-3ee3e37c7f50",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36ff5a95-54f4-4b6f-b52d-3a8ca75acb09",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "----InGame",
            "id": "bafc6314-bd8e-4b8f-a543-770c42055f08",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Shop",
            "id": "c5c0af4c-6b64-430b-8697-0a629cf8b9a6",
            "actions": [
                {
                    "name": "Shop",
                    "type": "Button",
                    "id": "fb620232-90cf-4c83-b073-a9b712a87180",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7d53982-e3e9-47ec-a314-e217eb6c6ffb",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterControl",
            "id": "07e76fb1-6d3f-4ab1-a7ad-65d544e337a2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8aedcfd8-4673-44d6-bae9-11f0818ba044",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "2a77fe18-e50e-4797-b2e7-eb4559e37079",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c1a618d-463d-4de0-9201-b21503b3cce8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "2aeb4b88-e898-4e58-8d04-a13b53da8595",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "beff7d56-5087-4440-8394-d35b8bbb91f3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "5c020d0b-0832-4fd6-9a5e-0963af823111",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "09cf805e-54ca-4b66-91f8-5e451142ee61",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9bd9b5a4-c441-4d5a-9e79-786b019b5998",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "af95a398-e4de-40fd-bd97-ffd1ef5631a3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4ddcf908-0123-4bfd-b1b1-57c9d18ecdb5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dfc7f149-ed4e-496f-97de-e46f4254b291",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e22a3abf-f079-4400-a9c3-27e2d5cda73c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e982f8b7-1bbc-436b-a078-2e9e92c24867",
                    "path": "<XRController>/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36148f7e-2290-494e-a549-61096713f1d5",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "624eb0e8-ac17-4f85-a10d-ed2f1a190e36",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b40c04a6-df23-43c6-8464-ebed61c4c029",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;Touch",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a6a63b1-0d27-4349-9d50-6855e760b071",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "--WaveBreak",
            "id": "4ac53089-044a-41e8-8919-48157b0450dd",
            "actions": [],
            "bindings": []
        },
        {
            "name": "States",
            "id": "0a73548e-a665-42e9-96d5-a859a24494f1",
            "actions": [
                {
                    "name": "ChangeMode",
                    "type": "Button",
                    "id": "8e8a2fc6-c8c3-4a16-887a-54adbce0b8f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartWave",
                    "type": "Button",
                    "id": "e80d69af-001e-493d-97c5-16d1e37f4e0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d578b8e-d43f-428c-8e88-da1751288564",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f74ba67-5d71-4883-ab15-6e08aaa0e8f9",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartWave",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "--DuringWave",
            "id": "1665e62b-0a92-4c51-a512-2edb89595030",
            "actions": [],
            "bindings": []
        },
        {
            "name": "--Modes",
            "id": "c9fa7373-0e15-47a3-b3cd-def978e5a5b5",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Shooting",
            "id": "ef6c03c1-e4e1-4318-bf74-8a058698154f",
            "actions": [
                {
                    "name": "ChangeWeapon",
                    "type": "Value",
                    "id": "9ec54d0d-e261-4ecd-b2d4-795d77eb083f",
                    "expectedControlType": "DiscreteButton",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "808b3ee2-58d2-4a86-b8a6-42d7d9ece0c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "3109f38b-d292-4f9b-91c7-d2cd20ae4e9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextWeapon",
                    "type": "Button",
                    "id": "3d6683d4-7219-4001-b503-be0f4ba94ebb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousWeapon",
                    "type": "Button",
                    "id": "b31e6d43-b154-4011-9a9f-b3cd98b40b00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b33b950d-a7a2-45bd-9d88-91844cda93c8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a88b7ad3-239f-4ce8-9e35-c552966b313b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1151aa4-bd71-4c35-abb5-6839070da349",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61d8ec3b-30af-436a-b528-3bf9ffd9b3c8",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c777b056-706f-41e8-97c8-ddc629ca2833",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "766756b4-1eee-4128-922e-c8c75d086704",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55c4f336-d47d-4cae-84f5-57a0d8ab40a0",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d21aaa23-2484-484d-a0e9-6a3541b16b0b",
                    "path": "<XRController>/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1555fa2-554c-4e3d-9280-044ae2dfe0a1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "162a4760-6937-40ed-aa5a-e39cf333a2ff",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5265fdc-7df2-4153-a9c4-a694f372ea98",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Building",
            "id": "c06e4205-4a07-435b-a218-80b5fc0cc53b",
            "actions": [
                {
                    "name": "ChangeStructure",
                    "type": "Value",
                    "id": "12fa4911-2fcf-46a2-a312-6f544e055c6a",
                    "expectedControlType": "DiscreteButton",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BuildStructure",
                    "type": "PassThrough",
                    "id": "2d542433-edf4-4302-8fea-5f598f58c0df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ba39e49-d1ed-4dd7-934a-5d749cb85019",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23992451-c7be-422a-85bd-fddc3021b947",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10161317-2b88-45aa-8663-1e50cff01e5f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "423aa198-5f47-414e-a570-1a6644f5ee37",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36bb8e6d-d080-4a44-9e21-ce95759a1fa9",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a132d10a-2e90-4608-ba39-af6b8be48fd3",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb45d8ed-dadb-4010-9eb4-7231c3836cb2",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dccde60d-2a1b-4dcd-8233-07fba11e874d",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc78dad2-88c2-4df4-a8e8-eceb45047fb6",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f733df1-94f6-4c5d-8b6e-0ed81dd1bdc8",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "231ea420-6a87-47c0-a05d-609f40924077",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "BuildStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5568291b-f9a8-40d6-979a-8dade6b26174",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "BuildStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6f957d1-5b4b-4212-b880-90d04373efa5",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "BuildStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6b0a246-fbce-4f2c-aa5f-006d2b798a4e",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "BuildStructure",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}